<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_note"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/notes" />
    <item
        android:id="@+id/nav_archived"
        android:icon="@drawable/ic_archive"
        android:title="@string/archive" />
    <item
        android:id="@+id/nav_trash"
        android:icon="@drawable/ic_delete"
        android:title="@string/trash" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings" />

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/email" />
        </menu>
    </item>

</menu>
